Publish explicit fixed host byte output